correcao de bugs e layouts

--- a/src/app/modules/current-performance/components/current-performance-details/current-performance-details.component.html
+++ b/src/app/modules/current-performance/components/current-performance-details/current-performance-details.component.html
@@ -21,7 +21,7 @@
       <button class="subject-button">
         <i class="fas fa-clipboard"></i> Prova
         <div *ngIf="!examDone" class="progress">Não iniciada</div>
-        <div *ngIf="examDone" class="progress">{{ objSelectedPerformance?.exam }}</div>
+        <div *ngIf="examDone" class="progress">{{ objSelectedPerformance?.exam }}.0</div>
       </button>
     </div>
     <div class="subject">
