--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -78,6 +78,10 @@
     margin-bottom: 12px;
   }
 
+  .main-buttons:hover {
+    background-color: #007bff;
+  }
+
   .login-access {
     margin-top: 5px;
   }
