--- a/src/app/modules/initiation/components/welcome/welcome.component.scss
+++ b/src/app/modules/initiation/components/welcome/welcome.component.scss
@@ -55,13 +55,14 @@
 }
 
 .footer {
-  padding: 1rem;
-  text-align: center;
-  position: absolute;
-  bottom: 20px;
-  color: darkgreen;
-  font-size: 1.2rem;
   font-weight: bold;
+  font-size: 1.2rem;
+  color: darkgreen;
+  font-weight: 500;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
 }
 
 @media (max-width: 768px) {
