--- a/src/app/modules/initiation/components/welcome/welcome.component.scss
+++ b/src/app/modules/initiation/components/welcome/welcome.component.scss
@@ -56,7 +56,7 @@
 
 .footer {
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 16px;
   color: darkgreen;
   font-weight: 500;
   margin-bottom: 20px;
